2007-07-28  Aidan Kehoe  <kehoea@parhasard.net>

	* unicode.el:
	Assert that the ccl-encode-to-ucs-2 vector corresponds to the
	compiled program at byte-compile time. Display non-BMP characters
	as U+FFFD. 

2007-07-28  Adrian Aichner  <adrian@xemacs.org>

	* package-get.el (package-get-download-sites): Document Chile and
	update Denmark download site.
	* package-get.el (package-get-pre-release-download-sites): Ditto.

2007-07-27  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/mule-ccl.el:
	* mule/ccl.el: 
	Renamed mule-ccl.el to ccl.el, for compatibility with GNU now we
	no longer dump it. 
	* mule/mule-coding.el (require):
	* mule/chinese.el (progn):
	Reflect this renaming in a couple of require calls. 

2007-07-23  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/general-late.el (posix-charset-to-coding-system-hash):
	Pick up coding system aliases as well as their canonical names
	when initialising this hash. 
	* mule/mule-cmds.el (parse-posix-locale-string):
	Interpret @cyrillic to mean that the coding system for a language
	environment is Windows-1251. 

2007-07-21  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/chinese.el:
	* mule/cyrillic.el:
	* mule/cyrillic.el (cyrillic-koi8-r-decode-table): Removed.
	* mule/cyrillic.el (cyrillic-koi8-r-encode-table): Removed.
	* mule/cyrillic.el (cyrillic-alternativnyj-decode-table): Removed.
	* mule/cyrillic.el (cyrillic-alternativnyj-encode-table): Removed.
	* mule/cyrillic.el (cyrillic-koi8-r-to-external-code-table):
	Removed.
	
	* mule/cyrillic.el (ccl-decode-koi8): Removed.
	* mule/cyrillic.el (ccl-encode-koi8): Removed.
	* mule/cyrillic.el (ccl-decode-alternativnyj): Removed.
	* mule/cyrillic.el (ccl-encode-alternativnyj): Removed.
	* mule/cyrillic.el
	(cyrillic-alternativnyj-to-external-code-table): Removed.
	* mule/cyrillic.el ("Cyrillic-ISO"): Langenv added.
	* mule/cyrillic.el ("Ukrainian"): Langenv added.
	* mule/cyrillic.el ("Bulgarian"): Langenv added.
	* mule/cyrillic.el ("Belarusian"): Langenv added.
