@@ -1,5 +1,10 @@
 2007-07-28  Aidan Kehoe  <kehoea@parhasard.net>
 
+	* mule/mule-coding.el (make-8-bit-create-decode-encode-tables):
+	Don't creat JIT mappings for U+0080-U+00FF at dump time.
+
+2007-07-28  Aidan Kehoe  <kehoea@parhasard.net>
+
 	* unicode.el:
 	Assert that the ccl-encode-to-ucs-2 vector corresponds to the
 	compiled program at byte-compile time. Display non-BMP characters
